
0.93 - bowtie: add flag "--no-mixed" to suppress crazy mate pairing in output
       freebayes: bam files are depth-limited before being run through freebayes

0.92 - "vcf-nway" can now run SplitsTree
       "count" now outputs in grouped csv format, with sample tags in header
       add "analyse-expression"
       add "--trim-to" and "--out-separate" flags to "clip:"
       io.execute/pipe_from/pipe_to now accept 'cores' parameter
       -- use this instead of Action.cores_required (now deprecated)
       "bowtie:" use "-a" instead of "--all" so as to not produce a random file in current directory

0.91 - Make system adds "--make-do" and "--make-done" selections
       Workflow for VCF variant calling
       Workflow to analyse a set of samples
       "vcf-nway" reaches basic usability

0.90 - Sensible error if prefix or output dir not given.
       legion is greedier about using cores.
       Stage objects can now also manage "with"-style contexts.
       "shred:" can now output fastq.
       "bowtie:" now uses flags --all, --no-discordant, --threads.

0.89 - Change "--infidelity-snps" back to "--infidelity"
       Added Dirichlet-based quality calculation to "vcf-filter:"

0.88 - State files are no longer hidden in ".state", they're placed in
       the same location as output files.

0.87 - added "bowtie:"
       added tools for variant calling using VCF format (under development)

0.86 - IOError now displays error message
       Added "run-igv:"
       "shrimp:" sets read group and sample in BAM file

0.85 - update "fisher:" to work again

0.84 - update "test-counts:" to work with recent edgeR

0.83 - bugfix reading seqeucnes from gff3 file
       nesoni.config parameters now have "affects_output" flag, Execute tool now uses this

0.82 - "clip:" can take a file of adaptors, or use builtin list (updated).
       "clip:" retains read descriptions (Illumina reads now include useful information in description).
       "clip:" checks for non-duplicate read names.
