@@ -10,3 +10,27 @@ INFO [2012-11-27 14:04:55,817]  [GenomeManager.java:118] [main]  Genome loaded
 INFO [2012-11-27 14:05:36,460]  [GenomeManager.java:118] [main]  Genome loaded
 INFO [2012-11-27 14:06:10,547]  [GenomeManager.java:118] [main]  Genome loaded
 INFO [2012-11-27 14:06:47,857]  [GenomeManager.java:118] [main]  Genome loaded
+INFO [2012-12-12 16:18:33,289]  [GenomeManager.java:118] [main]  Genome loaded
+INFO [2012-12-12 16:18:55,880]  [GenomeManager.java:118] [main]  Genome loaded
+INFO [2012-12-12 16:19:19,312]  [GenomeManager.java:118] [main]  Genome loaded
+INFO [2012-12-12 16:19:42,923]  [GenomeManager.java:118] [main]  Genome loaded
+INFO [2012-12-12 16:20:19,065]  [GenomeManager.java:118] [main]  Genome loaded
+INFO [2012-12-12 16:20:54,773]  [GenomeManager.java:118] [main]  Genome loaded
+INFO [2012-12-12 16:21:31,532]  [GenomeManager.java:118] [main]  Genome loaded
+INFO [2012-12-12 16:22:09,777]  [GenomeManager.java:118] [main]  Genome loaded
+INFO [2012-12-12 16:23:26,666]  [GenomeManager.java:118] [main]  Genome loaded
+INFO [2012-12-12 16:24:10,110]  [GenomeManager.java:118] [main]  Genome loaded
+INFO [2012-12-12 16:24:44,337]  [GenomeManager.java:118] [main]  Genome loaded
+INFO [2012-12-12 16:25:19,984]  [GenomeManager.java:118] [main]  Genome loaded
+INFO [2012-12-12 17:04:55,181]  [GenomeManager.java:118] [main]  Genome loaded
+INFO [2012-12-12 17:05:17,294]  [GenomeManager.java:118] [main]  Genome loaded
+INFO [2012-12-12 17:05:40,098]  [GenomeManager.java:118] [main]  Genome loaded
+INFO [2012-12-12 17:06:03,113]  [GenomeManager.java:118] [main]  Genome loaded
+INFO [2012-12-12 17:06:39,095]  [GenomeManager.java:118] [main]  Genome loaded
+INFO [2012-12-12 17:07:15,169]  [GenomeManager.java:118] [main]  Genome loaded
+INFO [2012-12-12 17:07:51,406]  [GenomeManager.java:118] [main]  Genome loaded
+INFO [2012-12-12 17:08:27,813]  [GenomeManager.java:118] [main]  Genome loaded
+INFO [2012-12-12 17:09:43,432]  [GenomeManager.java:118] [main]  Genome loaded
+INFO [2012-12-12 17:10:23,040]  [GenomeManager.java:118] [main]  Genome loaded
+INFO [2012-12-12 17:10:54,698]  [GenomeManager.java:118] [main]  Genome loaded
+INFO [2012-12-12 17:11:26,723]  [GenomeManager.java:118] [main]  Genome loaded
