@@ -1,6 +1,7 @@
 
 0.93 - bowtie: add flag "--no-mixed" to suppress crazy mate pairing in output
        freebayes: bam files are depth-limited before being run through freebayes
+       shrimp: guess quality for each (pair of) files
 
 0.92 - "vcf-nway" can now run SplitsTree
        "count" now outputs in grouped csv format, with sample tags in header
